moved #arrow, fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ text-shadow: 1px 1px 2px black, 0 0 1em #F7D963, 0 0 0.2em #fff;
 }
 
 #arrow {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 
@@ -339,7 +339,6 @@ section {
 
 section h2.section-heading {
     margin-top: 0;
-    margin-bottom: 2em;
     font-size: 40px;
 }
 
